[gd_scene load_steps=3 format=3 uid="uid://bjlyddsh6v5t7"]

[ext_resource type="Script" uid="uid://c6k6xykkr1wvj" path="res://scenes/ui/quest_visibility.gd" id="1_vieii"]
[ext_resource type="Texture2D" uid="uid://q053v1v4d1vk" path="res://art/icon.svg" id="2_tdja1"]

[node name="achievments" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.109
anchor_top = 0.054
anchor_right = 0.109
anchor_bottom = 0.054
offset_left = 66.48
offset_top = 0.119999
offset_right = 836.48
offset_bottom = 619.12
script = ExtResource("1_vieii")

[node name="PanelContainer" type="PanelContainer" parent="Control"]
offset_top = 6.0
offset_right = 777.0
offset_bottom = 616.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
layout_mode = 2

[node name="MenuButton" type="MenuButton" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 35
text = "Starting My Journey"
icon = ExtResource("2_tdja1")
switch_on_hover = true

[node name="popup_person1" type="PopupPanel" parent="Control/PanelContainer/VBoxContainer/MenuButton"]
auto_translate_mode = 1
position = Vector2i(0, 200)
size = Vector2i(608, 60)
visible = true
borderless = false
max_size = Vector2i(1000, 60)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/VBoxContainer/MenuButton/popup_person1"]
custom_minimum_size = Vector2(600, 60)
offset_left = 4.0
offset_top = 4.0
offset_right = 604.0
offset_bottom = 76.0

[node name="description" type="Label" parent="Control/PanelContainer/VBoxContainer/MenuButton/popup_person1/VBoxContainer"]
custom_minimum_size = Vector2(600, 60)
layout_mode = 2
size_flags_horizontal = 0
text = "Accept your first quest to gain this acheivement"
autowrap_mode = 3
max_lines_visible = 5
visible_characters = 500
visible_ratio = 4.0

[node name="close" type="Button" parent="Control/PanelContainer/VBoxContainer/MenuButton/popup_person1/VBoxContainer"]
layout_mode = 2

[node name="Timer" type="Timer" parent="Control/PanelContainer/VBoxContainer"]
one_shot = true

[connection signal="mouse_entered" from="Control/PanelContainer/VBoxContainer/MenuButton" to="Control" method="_on_menu_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/PanelContainer/VBoxContainer/MenuButton" to="Control" method="_on_menu_button_mouse_exited"]
[connection signal="timeout" from="Control/PanelContainer/VBoxContainer/Timer" to="Control" method="_on_timer_timeout"]
